--- a/config/dnsdist/dnsdist.conf
+++ b/config/dnsdist/dnsdist.conf
@@ -35,24 +35,23 @@ addDOHLocal("10.13.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("10.14.0.1:8053", cert, key, { "/dns-query" })
 addDOHLocal("10.15.0.1:8053", cert, key, { "/dns-query" })
 
-
 -- IPv6
-addDOHLocal("[2a01:8b81:4800:9c00:0:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:1:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:2:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:3:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:4:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:5:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:6:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:7:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:8:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:9:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:10:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:11:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:12:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:13:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:14:0::1]:8053", cert, key, { "/dns-query" })
-addDOHLocal("[2a01:8b81:4800:9c00:15:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:0::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:1::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:2::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:3::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:4::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:5::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:6::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:7::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:8::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:9::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:10::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:11::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:12::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:13::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:14::1]:8053", cert, key, { "/dns-query" })
+addDOHLocal("[fd89:7a3b:42c0:15::1]:8053", cert, key, { "/dns-query" })
 
 -- ------------------------------------------------------------
 -- Backend: Unbound (loopback only, no check since recursive)
@@ -70,7 +69,7 @@ setACL({
   "127.0.0.0/8",
   "::1/128",
   "10.0.0.0/8",
-  "2a01:8b81:4800:9c00::/64"
+  "fd89:7a3b:42c0::/48"
 })
 
 -- ------------------------------------------------------------
