--- a/config/dnsmasq/99-homelab-listen.conf
+++ b/config/dnsmasq/99-homelab-listen.conf
@@ -29,7 +29,7 @@ dhcp-leasefile=/dev/null
 #   - Serve IPv6 Router Advertisements on wg0–wg7 via interface=wgX
 #   - Advertise per‑wgX DNS servers (::1 on each wgX)
 #
-# Never bind dnsmasq to a global IPv6 (e.g., 2a01:8b81:4800:9c00::4)
+# Never bind dnsmasq to a global (ISP‑delegated) IPv6 address
 # unless the router supports static DHCPv6 reservations — most do not.
 listen-address=::1
 
@@ -65,7 +65,8 @@ neg-ttl=60
 # ------------------------------------------------------------
 # IPv6 Router Advertisements for all WireGuard interfaces
 # ------------------------------------------------------------
-# Each wgX interface gets its own /64 from the delegated /56
+# Each wgX interface advertises its own IPv6 /64
+# Prefix source is interface‑local (ULA); no delegated IPv6 is assumed
 # Clients receive:
 #   - IPv6 address
 #   - Default gateway (::1 on wgX)
@@ -73,7 +74,7 @@ neg-ttl=60
 #   - Prefix lifetime + RA parameters
 
 # -------------------------
-# wg0 → 2a01:8b81:4800:9c01::/64
+# wg0 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg0,*
 enable-ra
@@ -81,7 +82,7 @@ dhcp-range=::100,::1ff,constructor:wg0,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg1 → 2a01:8b81:4800:9c02::/64
+# wg1 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg1,*
 enable-ra
@@ -89,7 +90,7 @@ dhcp-range=::100,::1ff,constructor:wg1,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg2 → 2a01:8b81:4800:9c03::/64
+# wg2 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg2,*
 enable-ra
@@ -97,7 +98,7 @@ dhcp-range=::100,::1ff,constructor:wg2,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg3 → 2a01:8b81:4800:9c04::/64
+# wg3 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg3,*
 enable-ra
@@ -105,7 +106,7 @@ dhcp-range=::100,::1ff,constructor:wg3,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg4 → 2a01:8b81:4800:9c05::/64
+# wg4 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg4,*
 enable-ra
@@ -113,7 +114,7 @@ dhcp-range=::100,::1ff,constructor:wg4,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg5 → 2a01:8b81:4800:9c06::/64
+# wg5 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg5,*
 enable-ra
@@ -121,7 +122,7 @@ dhcp-range=::100,::1ff,constructor:wg5,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg6 → 2a01:8b81:4800:9c07::/64
+# wg6 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg6,*
 enable-ra
@@ -129,7 +130,7 @@ dhcp-range=::100,::1ff,constructor:wg6,ra-names,64
 dhcp-option=option6:dns-server,[::1]
 
 # -------------------------
-# wg7 → 2a01:8b81:4800:9c08::/64
+# wg7 → IPv6 /64 (interface‑local, ULA)
 # -------------------------
 interface-name=wg7,*
 enable-ra
