Establish contract-driven prereqs, Python WG compiler, and enforce runtime state boundaries
- Formalize prereqs contract (verify vs mutate, no state caching)
- Add WireGuard Python compiler with content-addressed inputs and local venv
- Enforce capability gating (python3-venv) without polluting base prereqs
- Introduce contracts.inc and update graph to reflect explicit dependencies
- Harden .gitignore to exclude runtime state, venvs, and generated artifacts

This closes multiple hidden failure surfaces and makes system state explicit.

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,16 @@ dns-warm-async
 10.89.12.1/cloudflare_ddns*
 10.89.12.1/.cloudflare
 10.89.12.1/.ddns_confidential
+
+# Build / runtime state
+.state/
+wg/
+
+# Python virtual environments (generated, non-reproducible)
+__pycache__/
+pip-wheel-metadata/
+*.pyc
+*.pyo
+*.pyd
+.venv/
+venv/
