feat: converge dns-health and monitoring to contracts.inc invariants
- Implement drift-aware verification for dns-health-check
- Standardize icon semantics across all mk/ and scripts/
- Update Unbound configuration for verified DNSSEC enforcement
- Ensure compliance with Makefile recipe and structural invariants

--- a/config/unbound/unbound.conf
+++ b/config/unbound/unbound.conf
@@ -29,7 +29,7 @@ server:
     # Allow outbound queries via any interface (IPv4 and IPv6)
     outgoing-interface: 0.0.0.0
     outgoing-interface: ::
-    
+
     # Backend resolver port (dnsmasq forwards here)
     port: 5335
 
@@ -74,6 +74,9 @@ server:
     access-control: ::1/128 allow
     access-control: 127.0.0.0/8 allow
 
+    # Allow the NAS to query itself on its LAN IP
+    access-control: 10.89.12.4/32 allow
+
     # Allow recursion from the router only
     access-control: 10.89.12.1/32 allow
 
@@ -81,28 +84,36 @@ server:
     access-control: 10.89.12.0/24 refuse
 
     # ------------------------------------------------------------
-    # Performance tuning
+    # Performance tuning (Optimized for 6-core Forwarding)
     # ------------------------------------------------------------
-    # Threading and cache sharding
+    # Matches your Intel Gold 8505 (5-cores used for Unbound)
     num-threads: 5
+
+    # Use 4 or 8 slabs (must be power of 2). 8 is fine.
     msg-cache-slabs: 8
     rrset-cache-slabs: 8
     infra-cache-slabs: 8
     key-cache-slabs: 8
 
-    # Cache sizing
+    # Cache sizing - These are excellent and plenty for 100k+
     msg-cache-size: 256m
     rrset-cache-size: 512m
     key-cache-size: 128m
-    neg-cache-size: 4m
+    # To hold NXDOMAIN results from the 100k list
+    neg-cache-size: 64m
+
+    # Aggressive Use of DNSSEC NSEC records
+    # This allows Unbound to synthesize NXDOMAINs for whole ranges
+    # without querying upstream, saving massive amounts of time.
+    aggressive-nsec: yes
 
     # Aggressive prefetching for latency reduction
     prefetch: yes
     prefetch-key: yes
 
     # Query concurrency limits
-    outgoing-range: 4096
-    num-queries-per-thread: 8192
+    outgoing-range: 8192
+    num-queries-per-thread: 16384
 
     # Serve expired records while refreshing in background
     serve-expired: yes
@@ -119,6 +130,7 @@ server:
 
     # Moderate verbosity for operational visibility
     verbosity: 2
+    extended-statistics: yes
 
 # ------------------------------------------------------------
 # Authoritative-only resolution for bardi.ch
@@ -131,29 +143,29 @@ stub-zone:
     stub-host: ns12.infomaniak.ch
 
 # ------------------------------------------------------------
-# Recursive forwarding (disabled)
+# Recursive forwarding (enabled)
 # ------------------------------------------------------------
 # Unbound performs full recursion by default.
 # Forwarding can be enabled here if upstream resolvers are desired.
 #
-# forward-zone:
-#    name: "."
-#
-#    # Cloudflare
-#    forward-addr: 1.1.1.1
-#    forward-addr: 1.0.0.1
-#    forward-addr: 2606:4700:4700::1111
-#    forward-addr: 2606:4700:4700::1001
-#
-#    # Quad9
-#    forward-addr: 9.9.9.9
-#    forward-addr: 149.112.112.112
-#    forward-addr: 2620:fe::fe
-#    forward-addr: 2620:fe::9
-#
-#    # Digitale Gesellschaft (CH)
-#    forward-addr: 185.95.218.42
-#    forward-addr: 185.95.218.43
+forward-zone:
+    name: "."
+
+    # Cloudflare
+    forward-addr: 1.1.1.1
+    forward-addr: 1.0.0.1
+    forward-addr: 2606:4700:4700::1111
+    forward-addr: 2606:4700:4700::1001
+
+    # Quad9
+    forward-addr: 9.9.9.9
+    forward-addr: 149.112.112.112
+    forward-addr: 2620:fe::fe
+    forward-addr: 2620:fe::9
+
+    # Digitale Gesellschaft (CH)
+    forward-addr: 185.95.218.42
+    forward-addr: 185.95.218.43
 
 # ------------------------------------------------------------
 # Remote control interface
